--- a/src/components/main/index.less
+++ b/src/components/main/index.less
@@ -22,3 +22,11 @@
     width: 100%;
     outline: none;
 }
+
+.gl-widget {
+    color: white;
+    background-color: #000000a0;
+    padding: 2px 5px;
+    font-size: 14px;
+    position: absolute;
+}
